Fix spacing in small mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,10 @@ header {
       margin-left: 2rem;
       margin-top: 4rem;
       max-width: $sidebar-width;
+
+      h2 {
+        margin: 0.5rem 0;
+      }
     }
   }
 }
@@ -212,8 +216,6 @@ pre {
 // News.
 .news {
   h2 {
-    margin: 0.5rem 0;
-
     a.feed {
       img {
         width: 16px;
